--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
-        <title>Givenchy</title>
+        <title>aarxw</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Givenchy">
+        <meta property="og:title" content="aarxw">
         <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:image" content="https://i.imgur.com/0bcCmOg.gif">
         <meta name="theme-color" content="#2f3136">
@@ -46,7 +46,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("https://cdn.discordapp.com/attachments/635598913021411358/964975641017602068/33.jpg");
+  background-image: url("https://cdn.discordapp.com/attachments/963429216349745202/966375988290256988/anime-scenery-sunset-4k-xp.jpg");
 
   /* Full height */
   height: 100%; 
