--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ body, html {
                 <h1 style="font-family: derk; text-shadow: 0 0 0.40em #000000;">Givenchy</h1>
                 <div class="socials">
                     <span>
-                <a href="https://twitter.com/frGivenchy" style="font-family: Dosis; #bababa;">TELEGRAM</a>
+                <a href="https://twitter.com/creatinqq" style="font-family: Dosis; ##7e0105;">BLANK</a>
                     </span>
                     <span>
-                <a href="https://discord.gg/c7EDr7se4x" style="font-family: Dosis; #bababa;">DISCORD</a>
+                <a href="https://discord.gg" style="font-family: Dosis; ##7e0105;">BLANK</a>
                     </span>
                     <span>
-                <a href="https://t.me/frGivenchy" style="font-family: Dosis; #66ccf4;">TWITTER</a>
+                <a href="https://google.com" style="font-family: Dosis; #7e0105;">BLANK</a>
                     </span>
                    </span>
 	           <span>
