--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta property="og:title" content="aarxw">
         <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:image" content="https://i.imgur.com/0bcCmOg.gif">
-        <meta name="theme-color" content="#2f3136">
+        <meta name="theme-color" content="#7e0105">
         <link rel="stylesheet" href="asset/css/main.css">
     </head>
     <body>
@@ -66,7 +66,7 @@ body, html {
             <section class="fullscreen text-content">
             </div>
             <div id="center">
-                <h1 style="font-family: derk; text-shadow: 0 0 0.40em #000000;">Givenchy</h1>
+                <h1 style="font-family: derk; text-shadow: 0 0 0.40em #7e0105;">aarxw</h1>
                 <div class="socials">
                     <span>
                 <a href="https://twitter.com/creatinqq" style="font-family: Dosis; ##7e0105;">BLANK</a>
